2008-02-21  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (COMMON_CPPFLAGS): Remove variable.
	(t_addr_CPPFLAGS): Replace use of $(COMMON_CPPFLAGS)
	with use of $(CHECK_CPPFLAGS).
	(t_addr_trans_CPPFLAGS): Likewise.
	(t_rpc_CPPFLAGS): Likewise.

2008-02-20  Neal H. Walfield  <neal@gnu.org>

	* cap.h (RM_object_discarded_clear): Define.
	(object_discarded_clear): New method.

2008-02-18  Neal H. Walfield  <neal@gnu.org>

	* exceptions.h: Include <stdint.h>.
	(struct exception_info): Add field discarded.

2008-02-16  Neal H. Walfield  <neal@gnu.org>

	* stddef.h (DEBUG_BOLD): New macro.

2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* activity.h (struct activity_stats): Add field active_local.

2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* folio.h (struct folio): Add field discarded.
	(folio_object_discarded): New function.
	(folio_object_discarded_set): Likewise.

2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* folio.h (struct folio): Correctly calculate the size of
	the wait_queues_p array.
	(folio_object_wait_queue_p): Test the correct bit.
	(folio_object_wait_queue_p_set): Set the correct bit.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* activity.h (RM_activity_stats): New definition.
	(ACTIVITY_STATS_PERIODS): Change to 2.
	(struct activity_stats_buffer): New structure.
	(activity_stats): New RPC.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* cap.h (CAP_POLICY_GET): New define.
	(CAP_POLICY_SET): Likewise.
	(CAP_PROPERTIES_GET): Change implementation to use the above
	macros.
	(CAP_PROPERTIES_SET): Likewise.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* stddef.h (debug): Change program_name's type to char *.
	* t-addr-trans.c (program_name): Change type to char *.
	* t-addr.c (program_name): Likewise.
	* t-rpc.c (program_name): Likewise.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* cap.h (cap_type_strengthen): New function.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* folio.h (folio_t): New definition.